[tool.poetry]
name = "finrl"
version = "0.3.5"

description = "FinRL: Financial Reinforcement Learning Framework. Version 0.3.5 notes: stable version, code refactoring, more tutorials, clear documentation"
authors = ["Hongyang Yang, Xiaoyang Liu"]
license = "MIT"

readme = "README.md"
classifiers=[
        # Trove classifiers
        # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
    ]
keywords=["Reinforcement Learning", "Finance"]
[tool.poetry.urls]
github = "https://github.com/finrl/finrl-library"

[tool.poetry.dependencies]
python = ">=3.7"
pyfolio = {git="https://github.com/quantopian/pyfolio.git#egg=pyfolio-0.9.2"}
elegantrl = {git="https://github.com/AI4Finance-Foundation/ElegantRL.git#egg=elegantrl"}
alpaca_trade_api = ">=2.1.0"
ccxt = ">=1.66.32"
exchange_calendars = "3.6.3"
gputil = "*"
gym = ">=0.17"
importlib-metadata = "4.13.0"
jqdatasdk = "*"
lz4 = "*"
matplotlib = "*"
pandas = ">=1.1.5"
numpy = ">=1.17.3"
tensorboardX = "*"
yfinance = "*"
stockstats = ">=0.4.0"
scikit-learn = ">=0.21.0"
ray = {extras=["default", "tune"], version=">=2.0.0"}
stable-baselines3 = "^1.6.2"
wrds = ">=3.1.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
